--- a/app/public/styles/main.css
+++ b/app/public/styles/main.css
@@ -2325,6 +2325,7 @@ ul.incident-types ::marker {
 .item-table-more .item-text {
   font-size: 12px;
   line-height: 27px;
+  white-space: nowrap;
 }
 .item-table-more .item-text.is-selected a {
   font-weight: bold;
@@ -2333,6 +2334,7 @@ ul.incident-types ::marker {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 .item-table-more .item-table-more-options .item-text-with-icon {
   align-items: center;
