--- a/assets/styles/items/_table.scss
+++ b/assets/styles/items/_table.scss
@@ -160,6 +160,7 @@
   .item-text {
     font-size: 12px;
     line-height: 27px;
+    white-space: nowrap;
 
     &.is-selected {
       a {
@@ -172,6 +173,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    flex-wrap: wrap;
 
     .item-text-with-icon {
       align-items: center;
